--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Switter</title>
 </head>
 
@@ -59,7 +59,7 @@
         </div>
         <div class="main-account">
             <a href="">
-                <img class="tweet_img" src="../images/file.jpg" alt="">
+                <img class="tweet_img" src="images/file.jpg" alt="">
                 <div class="account-details">
                     <span class="account-name">Youssef Ashraf</span>
                     <span class="account-handle">ITIan</span>
@@ -78,7 +78,7 @@
                     <i class="material-icons-outlined">auto_awesome</i>
                 </div>
                 <div class="new-tweet">
-                    <img src="../images/file.jpg" class="tweet_img" alt="">
+                    <img src="images/file.jpg" class="tweet_img" alt="">
                     <div class="new-tweet-details">
                         <input type="text" name="" placeholder="Whats happening?">
                         <div class="new-tweet-actions">
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="feed-tweet">
-                    <img src="../images/file.jpg" class="tweet_img" alt="">
+                    <img src="images/file.jpg" class="tweet_img" alt="">
                     <div class="feed-tweet-details">
                         <div class="twitter_details">
                             <a href="">
@@ -130,7 +130,7 @@
 
                 </div>
                 <div class="feed-tweet">
-                    <img src="../images/file.jpg" class="tweet_img" alt="">
+                    <img src="images/file.jpg" class="tweet_img" alt="">
                     <div class="feed-tweet-details">
                         <div class="twitter_details">
                             <a href="">
@@ -156,7 +156,7 @@
 
                 </div>
                 <div class="feed-tweet">
-                    <img src="../images/file.jpg" class="tweet_img" alt="">
+                    <img src="images/file.jpg" class="tweet_img" alt="">
                     <div class="feed-tweet-details">
                         <div class="twitter_details">
                             <a href="">
@@ -182,7 +182,7 @@
 
                 </div>
                 <div class="feed-tweet">
-                    <img src="../images/file.jpg" class="tweet_img" alt="">
+                    <img src="images/file.jpg" class="tweet_img" alt="">
                     <div class="feed-tweet-details">
                         <div class="twitter_details">
                             <a href="">
@@ -208,7 +208,7 @@
 
                 </div>
                 <div class="feed-tweet">
-                    <img src="../images/file.jpg" class="tweet_img" alt="">
+                    <img src="images/file.jpg" class="tweet_img" alt="">
                     <div class="feed-tweet-details">
                         <div class="twitter_details">
                             <a href="">
@@ -234,7 +234,7 @@
 
                 </div>
                 <div class="feed-tweet">
-                    <img src="../images/file.jpg" class="tweet_img" alt="">
+                    <img src="images/file.jpg" class="tweet_img" alt="">
                     <div class="feed-tweet-details">
                         <div class="twitter_details">
                             <a href="">
@@ -260,7 +260,7 @@
 
                 </div>
                 <div class="feed-tweet">
-                    <img src="../images/file.jpg" class="tweet_img" alt="">
+                    <img src="images/file.jpg" class="tweet_img" alt="">
                     <div class="feed-tweet-details">
                         <div class="twitter_details">
                             <a href="">
@@ -286,7 +286,7 @@
 
                 </div>
                 <div class="feed-tweet">
-                    <img src="../images/file.jpg" class="tweet_img" alt="">
+                    <img src="images/file.jpg" class="tweet_img" alt="">
                     <div class="feed-tweet-details">
                         <div class="twitter_details">
                             <a href="">
@@ -312,7 +312,7 @@
 
                 </div>
                 <div class="feed-tweet">
-                    <img src="../images/file.jpg" class="tweet_img" alt="">
+                    <img src="images/file.jpg" class="tweet_img" alt="">
                     <div class="feed-tweet-details">
                         <div class="twitter_details">
                             <a href="">
@@ -336,33 +336,7 @@
                     </div>
                 </div>
                 <div class="feed-tweet">
-                    <img src="../images/file.jpg" class="tweet_img" alt="">
-                    <div class="feed-tweet-details">
-                        <div class="twitter_details">
-                            <a href="">
-                                Youssef Ashraf
-                                <span class="tweet-handle">@ITIans • 1 hr</span>
-                            </a>
-                            <i class="material-icons-outlined">more_horiz</i>
-
-                        </div>
-                        <div class="tweet-text">
-                            <p>I am so glad to be a part of the ITI</p>
-                        </div>
-
-                        <div class="tweet-icons">
-                            <i class="material-icons-outlined">chat_bubble_outline</i>
-                            <i class="material-icons-outlined">restart_alt</i>
-                            <i class="material-icons-outlined">favorite_border</i>
-                            <i class="material-icons-outlined">upload</i>
-                        </div>
-
-                    </div>
-
-
-                </div>
-                <div class="feed-tweet">
-                    <img src="../images/file.jpg" class="tweet_img" alt="">
+                    <img src="images/file.jpg" class="tweet_img" alt="">
                     <div class="feed-tweet-details">
                         <div class="twitter_details">
                             <a href="">
@@ -388,7 +362,7 @@
 
                 </div>
                 <div class="feed-tweet">
-                    <img src="../images/file.jpg" class="tweet_img" alt="">
+                    <img src="images/file.jpg" class="tweet_img" alt="">
                     <div class="feed-tweet-details">
                         <div class="twitter_details">
                             <a href="">
@@ -414,7 +388,33 @@
 
                 </div>
                 <div class="feed-tweet">
-                    <img src="../images/file.jpg" class="tweet_img" alt="">
+                    <img src="images/file.jpg" class="tweet_img" alt="">
+                    <div class="feed-tweet-details">
+                        <div class="twitter_details">
+                            <a href="">
+                                Youssef Ashraf
+                                <span class="tweet-handle">@ITIans • 1 hr</span>
+                            </a>
+                            <i class="material-icons-outlined">more_horiz</i>
+
+                        </div>
+                        <div class="tweet-text">
+                            <p>I am so glad to be a part of the ITI</p>
+                        </div>
+
+                        <div class="tweet-icons">
+                            <i class="material-icons-outlined">chat_bubble_outline</i>
+                            <i class="material-icons-outlined">restart_alt</i>
+                            <i class="material-icons-outlined">favorite_border</i>
+                            <i class="material-icons-outlined">upload</i>
+                        </div>
+
+                    </div>
+
+
+                </div>
+                <div class="feed-tweet">
+                    <img src="images/file.jpg" class="tweet_img" alt="">
                     <div class="feed-tweet-details">
                         <div class="twitter_details">
                             <a href="">
@@ -438,7 +438,7 @@
                 </div>
 
                 <div class="feed-tweet">
-                    <img src="../images/file.jpg" class="tweet_img" alt="">
+                    <img src="images/file.jpg" class="tweet_img" alt="">
                     <div class="feed-tweet-details">
                         <div class="twitter_details">
                             <a href="">
@@ -461,7 +461,7 @@
                     </div>
                 </div>
                 <div class="feed-tweet">
-                    <img src="../images/file.jpg" class="tweet_img" alt="">
+                    <img src="images/file.jpg" class="tweet_img" alt="">
                     <div class="feed-tweet-details">
                         <div class="twitter_details">
                             <a href="">
@@ -484,7 +484,7 @@
                     </div>
                 </div>
                 <div class="feed-tweet">
-                    <img src="../images/file.jpg" class="tweet_img" alt="">
+                    <img src="images/file.jpg" class="tweet_img" alt="">
                     <div class="feed-tweet-details">
                         <div class="twitter_details">
                             <a href="">
@@ -507,7 +507,7 @@
                     </div>
                 </div>
                 <div class="feed-tweet">
-                    <img src="../images/file.jpg" class="tweet_img" alt="">
+                    <img src="images/file.jpg" class="tweet_img" alt="">
                     <div class="feed-tweet-details">
                         <div class="twitter_details">
                             <a href="">
@@ -593,7 +593,7 @@
                     </div>
                     <div class="follow_profile">
                         <div class="img_a">
-                            <img src="../images/file.jpg" class="tweet_img" alt="">
+                            <img src="images/file.jpg" class="tweet_img" alt="">
                             <div class="follow_details">
                                 <a href="">Youssef Ashraf</a>
                                 <span>@ITIians <span id="follows">Follows you</span></span>
@@ -604,7 +604,7 @@
 
                     <div class="follow_profile">
                         <div class="img_a">
-                            <img src="../images/file.jpg" class="tweet_img" alt="">
+                            <img src="images/file.jpg" class="tweet_img" alt="">
                             <div class="follow_details">
                                 <a href="">Youssef Ashraf</a>
                                 <span>@ITIians <span id="follows">Follows you</span></span>
